refactor: TableService 리팩토링